[project]
name = "chatbot-gastos"
version = "0.1.0"
description = "Telegram Budget Bot"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "Flask",
    "Flask-SQLAlchemy",
    "python-dotenv",
    "google-generativeai",
    "requests",
    "psycopg2-binary",
    "asgiref",
]

[tool.vercel]
entrypoint = "main.py"
